<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iTester 5</string>
    <string name="hello_world">iTester v5.1.2 ©LiYu 20150128</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_hw">Hardware Information</string>
    <string name="title_activity_mac">Mac Information</string>
    <string name="title_activity_bat">Battery Information</string>
    <string name="title_activity_image">Image Information</string>
    <string name="title_activity_gsensor">Gsensor Test</string>
    <string name="title_activity_brightness">LCD Brightness</string>
    <string name="title_activity_rgb">RGB</string>
    <string name="title_activity_multitouch">Check Touch Points</string>
    <string name="title_activity_drawing">Drawing Test</string>
    <string name="title_activity_wifi">WiFi Test</string>
    <string name="title_activity_bt">Bluetooth Test</string>
    <string name="title_activity_sd">Check SD Card</string>
    <string name="title_activity_mp3">Audio Play</string>
    <string name="title_activity_mp4">Video Play</string>
    <string name="title_activity_recorder">Sound Recorder</string>
    <string name="title_activity_camera">Camera Test</string>
    <string name="title_activity_lsensor">Light sensor</string>
    <string name="title_activity_mobile_net">MobileNetwork</string>
    <string name="title_activity_vibrate">Vibrate Test</string>
    <string name="title_activity_flashlight">Flashlight Test</string>
    <string name="title_activity_compass">Compass Test</string>
    <string name="getting_location">Getting location</string>
    <string name="cannot_get_location">Cannot get your location</string>
    <string name="location_north">%s N</string>
    <string name="location_south">%s S</string>
    <string name="location_east">%s E</string>
    <string name="location_west">%s W</string>
    <string name="title_activity_key">Button Test</string>
    <string name="title_activity_gyroscope">Gyroscope Test</string>
    <string name="title_activity_proximity">Proximity Test</string>
    <string name="title_activity_gps">GPS Test</string>
    <string name="menu_about">About</string>
    <string name="title_activity_start">Start</string>
    <string name="title_activity_results">Results</string>
    <string name="title_activity_otg">OTG Test</string>
    <string name="title_tips">Tips</string>
    <string name="message_resultNG">Confirm the test result NG?</string>
    <string name="label_brightness">Brightness:  </string>
    <string name="label_nobtdevice">No bluetooth devices searchable!</string>
    <string name="label_btresearch">seconds,then search again</string>
    <string name="label_nobt_or_cannotopen">No bluetooth or cannot turn on</string>
    <string name="label_bt_list">Searched Bluetooth devices:</string>
    <string name="label_bt_seraching">Searching</string>
    <string name="label_bt_searchedone">\nSearch done!</string>
    <string name="label_bt_none">No bluetooth!</string>
    <string name="label_camera_none">No cameras!</string>
    <string name="label_iknow">Yes,I See</string>
    <string name="label_flashlight_off">Off</string>
    <string name="label_flashlight_on">On</string>
    <string name="label_flashlight_none">No Flashlight!</string>
    <string name="label_flashlight_exception">Exception!</string>
    <string name="label_gps_none">No GPS!</string>
    <string name="label_gps_turnon">Turn on GPS</string>
    <string name="label_gps_satellitenumber">Satellites number: </string>
    <string name="label_gyro_none">No Gyroscope!</string>
    <string name="label_gyro_noneorexception">No Gyroscope or Exceptions!</string>
    <string name="label_hw_brand">Brand: </string>
    <string name="label_hw_model">Model: </string>
    <string name="label_hw_cpufreq">CPU Freq: </string>
    <string name="label_hw_gpuversion">GPU Version: </string>
    <string name="label_hw_lcd_resolution">LCD Resolution: </string>
    <string name="label_hw_lcd_dpi">LCD DPI: </string>
    <string name="label_hw_frontcamera">\nFront Camera: </string>
    <string name="label_hw_rearcamera">\nRear Camera: </string>
    <string name="label_hw_camera_exception">\nFront Camera: NA \nRear Camera: NA</string>
    <string name="label_lightsensor_operation">\nPlease cover the light sensor in 5 seconds,and check if the value changed</string>
    <string name="label_lightsensor_none">No Lightsensor!</string>
    <string name="label_lightsensor_noneorexception">No Lightsensor or Exceptions!</string>
    <string name="label_phone_type">PhoneType: </string>
    <string name="label_phone_carrier">\nCarrier: </string>
    <string name="label_phone_net_type">\nNetType: </string>
    <string name="label_phone_signalstrength">\nSignalStrength: </string>
    <string name="label_phone_dongle">Dongle</string>
    <string name="label_mp3_pluginheadset">Please plug in headset!</string>
    <string name="label_mp3_headset_removed">Headset Removed!</string>
    <string name="label_mp3_detected">Detected: </string>
    <string name="label_mp3_headset_type_4">Headset with microphone</string>
    <string name="label_mp3_headset_type_3">Headset</string>
    <string name="label_multitouch_tips">Please touch the screen with more fingers!</string>
    <string name="label_otg_tips">Please plug in USB mouse or disk!</string>
    <string name="label_prox_none">No Proximity!</string>
    <string name="label_prox_operation">\nPlease cover the Prox sensor in 5 seconds,and check if the value changed</string>
    <string name="label_prox_noneorexception">No Proximity sensor or Exceptions!</string>
    <string name="label_confirmexit">Confirm EXIT?</string>
    <string name="label_exit">Exit</string>
    <string name="label_test_manual">Manual Test</string>
    <string name="label_test_auto">Auto Test</string>
    <string name="label_vibrator_none">No Vibrator!</string>
    <string name="label_vibrator_start">Start vibrate</string>
    <string name="label_vibrator_stop">Stop vibrate</string>
    <string name="label_wifi_connected_info">Connected AP info: </string>
    <string name="label_wifi_ap_none">No AP available!</string>
    <string name="label_wifi_ap_outofrange">AP is out of range!</string>
    <string name="label_sd_internalsd">Internal SD Card</string>
    <string name="label_sd_externalsd">External SD Card</string>
    <string name="label_sd_usb">USB Storage</string>
    <string name="label_compass_none">Not support Compass!</string>
    <string name="button_hw">Device Info</string>
    <string name="button_mac">Mac address</string>
    <string name="button_bat">Battery</string>
    <string name="button_image">OS Info</string>
    <string name="button_gsensor">Gsensor</string>
    <string name="button_brightness">Brightness</string>
    <string name="button_rgb">RGB Test</string>
    <string name="button_multitouch">MultiTouch</string>
    <string name="button_drawing">TP Test</string>
    <string name="button_wifi">WiFi</string>
    <string name="button_bt">Bluetooth</string>
    <string name="button_sd">Storage</string>
    <string name="button_mp3">Audio</string>
    <string name="button_mp4">Video</string>
    <string name="button_record">Recorder</string>
    <string name="button_camera">Camera</string>
    <string name="button_lsensor">Light Sensor</string>
    <string name="button_mobile">MobileNetwork</string>
    <string name="button_vibrate">Vibrator</string>
    <string name="button_flashlight">Flashlight</string>
    <string name="button_keyboard">Button Test</string>
    <string name="button_compass">Compass</string>
    <string name="button_gyro">Gyro Sensor</string>
    <string name="button_prox">Prox Sensor</string>
    <string name="button_gps">GPS</string>
    <string name="button_reset">Factory Reset</string>
    <string name="about_content">The software just for internal use only!\n\nAny questions and suggestions please contact me: me@liyuyu.cn\n\nThanks~</string>
    <string name="title_warning">Warning</string>
    <string name="label_format">Format Internal SD Card</string>
    <string name="button_otg">OTG</string>
    <string name="button_ethernet">Ethernet</string>
    <string name="title_activity_ethernet">Ethernet</string>
    <string name="label_ethernet_disconnectted">Ethernet disconnected!</string>
    <string name="label_ethernet_connectted">Ethernet connected!</string>
    <string name="label_ethernet_connect">Please plug network cable!</string>
    <string name="button_fm">FM Radio</string>
    <string name="label_confirm_fm_result">Confirm FM test result!</string>
    <string name="title_activity_fm">FM Radio</string>
    <string name="button_fm_open">Open FM Radio</string>

</resources>
