<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/button_hw"
                    android:layout_width="0.0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_1"
                    android:text="@string/button_hw"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_mac"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_1"
                    android:text="@string/button_mac"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_bat"
                    android:layout_width="0.0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_1"
                    android:text="@string/button_bat"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_image"
                    android:layout_width="0.0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_1"
                    android:text="@string/button_image"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_gsensor"
                    android:layout_width="0.0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_1"
                    android:text="@string/button_gsensor"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                 <Button
                    android:id="@+id/button_brightness"
                    android:layout_width="0.0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_1"
                    android:text="@string/button_brightness"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_rgb"
                    android:layout_width="0.0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_1"
                    android:text="@string/button_rgb"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_multitouch"
                    android:layout_width="0.0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_1"
                    android:text="@string/button_multitouch"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_drawing"
                    android:layout_width="0.0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_1"
                    android:text="@string/button_drawing"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_wifi"
                    android:layout_width="0.0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_1"
                    android:text="@string/button_wifi"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                 <Button
                    android:id="@+id/button_bt"
                    android:layout_width="0.0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_1"
                    android:text="@string/button_bt"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_sd"
                    android:layout_width="0.0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_1"
                    android:text="@string/button_sd"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_mp3"
                    android:layout_width="0.0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_1"
                    android:text="@string/button_mp3"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_mp4"
                    android:layout_width="0.0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_1"
                    android:text="@string/button_mp4"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_record"
                    android:layout_width="0.0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_1"
                    android:text="@string/button_record"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                 <Button
                    android:id="@+id/button_camera"
                    android:layout_width="0.0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_1"
                    android:text="@string/button_camera"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_lsensor"
                    android:layout_width="0.0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_1"
                    android:text="@string/button_lsensor"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_mobile"
                    android:layout_width="0.0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_1"
                    android:text="@string/button_mobile"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_vibrate"
                    android:layout_width="0.0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_1"
                    android:text="@string/button_vibrate"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_flashlight"
                    android:layout_width="0.0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_1"
                    android:text="@string/button_flashlight"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />
            </LinearLayout>
            
             <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                 <Button
                    android:id="@+id/button_keyboard"
                    android:layout_width="0.0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_1"
                    android:text="@string/button_keyboard"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_compass"
                    android:layout_width="0.0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_1"
                    android:text="@string/button_compass"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_gyro"
                    android:layout_width="0.0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_1"
                    android:text="@string/button_gyro"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_prox"
                    android:layout_width="0.0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_1"
                    android:text="@string/button_prox"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_gps"
                    android:layout_width="0.0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_1"
                    android:text="@string/button_gps"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />
            </LinearLayout>
               <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                 <Button
                    android:id="@+id/button_otg"
                    android:layout_width="0.0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_1"
                    android:text="@string/button_otg"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_ethernet"
                    android:layout_width="0.0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_1"
                    android:text="@string/button_ethernet"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />
                <Button
                    android:id="@+id/button_fm"
                    android:layout_width="0.0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_1"
                    android:text="@string/button_fm"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

            </LinearLayout>
              <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                 <Button
                    android:id="@+id/button_reset"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_style_2"
                    android:text="@string/button_reset"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
